add Dockerfile and setup Docker Compose for full stack